[package]
name = "osm-tile-downloader"
description = "Download tiles from an OSM tileserver"
version = "0.2.2"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]
edition = "2018"

repository = "https://github.com/NeoLegends/osm-tile-downloader"
keywords = ["open", "street", "map", "osm", "tile"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
anyhow = "1.0.28"
clap = "2.33.0"
futures = "0.3.4"
indicatif = "0.14.0"
rand = "0.7.3"
reqwest = { version = "0.10.4", features = ["stream"] }
strfmt = "0.1.6"
tokio = { version = "0.2.20", features = ["fs", "macros", "stream", "time"] }
